# page_analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: linter.yml
page_analyzer/: .env  __init__.py  actions_with_db.py  app.py  correct_url.py  parse_html.py  secrets.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
