[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "page_analyzer"
authors = ["aleksei <jiunov@gmail.com>"]
license = "free"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
flask = "^3.0.3"
validators = "^0.30.0"
bs4 = "^0.0.2"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
